<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    >

    <EditText
        android:id="@+id/addedCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text_color"
        android:ems="10"
        android:hint="@string/companyname"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/createc"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/addedCompanyName"
        app:layout_constraintEnd_toEndOf="@+id/addedCompanyName"
        app:layout_constraintStart_toStartOf="@+id/addedCompanyName" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/text_color"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/compdesc"
        android:inputType="textMultiLine"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/addedCompanyName"
        app:layout_constraintStart_toStartOf="@+id/addedCompanyName"
        app:layout_constraintTop_toBottomOf="@+id/addedCompanyName" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPeopleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/text_color"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>