<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tasqr_purple">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAMPLE TEXT"
        android:textColor="@color/text_color"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/addUsersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manemployees"
        android:textColor="@color/tasqr_purple"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintWidth_percent="0.6"
        android:visibility="gone"/>

    <Button
        android:id="@+id/addLeadersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/manageleaders"
        android:textColor="@color/tasqr_purple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUsersButton"
        app:layout_constraintWidth_percent="0.6"
        android:visibility="gone"/>

    <Button
        android:id="@+id/changeOwnerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/leaveproj"
        android:textColor="@color/tasqr_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLeadersButton"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tasqr_yellow"
        android:backgroundTint="@color/tasqr_yellow"
        android:text="CANCEL"
        android:layout_marginTop="10dp"
        android:textColor="@color/tasqr_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeOwnerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>