<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/tasqr_yellow"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/user_surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/user_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="2dp"
            android:textColor="@color/tasqr_yellow"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />


        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text=""
            android:textColor="@color/tasqr_yellow"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/user_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_surname" />

        <TextView
            android:id="@+id/user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="2dp"
            android:textColor="@color/tasqr_yellow"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_email" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:backgroundTint="@android:color/background_dark"
            android:color="@color/tasqr_yellow"
            android:text="@string/options"
            android:textColor="@color/tasqr_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tasqr_yellow"
            android:color="@color/tasqr_yellow"
            android:text="@string/logout"
            android:textColor="@color/tasqr_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_create_company" />

        <Button
            android:id="@+id/button_user_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tasqr_yellow"
            android:color="@color/tasqr_yellow"
            android:text="@string/userlist"
            android:textColor="@color/tasqr_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_create_company" />

        <Button
            android:id="@+id/button_create_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tasqr_yellow"
            android:color="@color/tasqr_yellow"
            android:text="@string/createc"
            android:textColor="@color/tasqr_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_password" />

        <Button
            android:id="@+id/button_change_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tasqr_yellow"
            android:backgroundTint="@color/tasqr_yellow"
            android:color="@color/tasqr_yellow"
            android:text="change avatar"
            android:textColor="@color/tasqr_purple"
            app:layout_constraintBottom_toTopOf="@+id/button_create_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>